nginx_cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-cm-pod
spec:
  containers:
    - name: nginx-cm-container
      image: nginx
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
