init_example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-container
    image: nginx
    volumeMounts:
    - name: shared
      mountPath: "/usr/share/nginx/html"
    startupProbe:
      exec:
        command:
        - cat
        - /usr/share/nginx/html/index.html
      initialDelaySeconds: 2
      periodSeconds: 2
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10
      periodSeconds: 10
      #    readinessProbe:
      #httpGet:
      # path: /index.html
      #  port: 80
      #periodSeconds: 5
      #failureThreshold: 10
      #initialDelaySeconds: 10
  volumes:
  - name: shared
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: init-example-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
